
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialogBackgroundLightColor" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:paddingBottom="21dp"
    android:paddingLeft="13dp"
    android:paddingRight="13dp"
    android:paddingTop="21dp"
    android:scrollbars="vertical" >
    
	<TextView
    	android:id="@+id/pebble_onoff"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    android:textColor="@color/dialogTextColor" />
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/enable_pebble_notification"
	    android:textAppearance="?android:attr/textAppearanceSmall"
    	android:paddingTop="21dp" 
    	android:textColor="@color/dialogTextColor" />
	
	<RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right|center_vertical"
	    android:paddingBottom="21dp"
	    android:orientation="horizontal" >

	    <RadioButton
	        android:id="@+id/enable_pebble_notification_yes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/yes"
	        android:textColor="@color/dialogTextColor" />

	    <RadioButton
	        android:id="@+id/enable_pebble_notification_no"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/no"
	        android:textColor="@color/dialogTextColor" />

	</RadioGroup>    
					
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/enable_pebble_notification_explanation"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    android:paddingBottom="13dp"
	    android:textColor="@color/dialogTextColor" />
		
			
	<View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:orientation="horizontal"
	    android:paddingTop="13dp" >

		<Button
		    android:id="@+id/options_ok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:layout_marginRight="21dp"
		    android:background="@drawable/dialog_button"
            android:paddingBottom="5sp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingTop="5sp"
		    android:text="@string/button_ok"
		    android:textColor="@color/dialogButtonTextColor" />

		<Button
		    android:id="@+id/options_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:background="@drawable/dialog_button"
            android:paddingBottom="5sp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingTop="5sp"
		    android:text="@string/button_cancel"
		    android:textColor="@color/dialogButtonTextColor" />
	
	</LinearLayout>    
</LinearLayout>
 </ScrollView>